fix: Overlap in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+@font-face{
+    font-family: 'PixelOperator';
+    src: url('../fonts/PixelOperatorMonoHB.ttf') format('truetype');
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media (max-width: 640px) {
+  .text {
+    top:150px;
+  }
+}
